@@ -1,3 +1,9 @@
+2020-02-01 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c,
+	  src/z80/ralloc2.cc:
+	  Fix bug #3174.
+
 2020-01-29 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/z80/peep.c:
